Adiciona carimbo diagonal PENDENTE e ícones do PWA

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 
   <meta name="theme-color" content="#7aba05" />
 
+  <!-- Manifest do PWA -->
   <link rel="manifest" href="manifest.webmanifest" />
+
+  <!-- Favicons (tudo vindo de icons/) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png" />
+  <!-- opcional, mas ok deixar também -->
+  <link rel="icon" href="icons/favicon.ico" />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <main id="app">
 
