adicionando info sobre versão

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
 
         <!-- Banner quando admin estiver "vendo como aluno" -->
-        <p id="admin-student-banner" class="small-note admin-banner hidden">
+        <p id="admin-student-banner" class="small-note admin-student-banner hidden">
           <!-- preenchido via JS -->
         </p>
 
@@ -97,6 +97,9 @@
           <button id="home-logout-btn" type="button" class="link-button">
             Sair da conta
           </button>
+
+          <!-- Versão do app (preenchida via JS) -->
+          <p id="app-version" class="app-version"></p>
         </div>
       </div>
     </section>
