mudando a classe e consequentemente a cor do botao ir para painel adm

--- a/index.html
+++ b/index.html
@@ -74,9 +74,14 @@
           </button>
 
           <!-- Botões específicos para admins -->
-          <button id="home-admin-btn" type="button" class="hidden">
+          <button
+            id="home-admin-btn"
+            type="button"
+            class="primary hidden"
+          >
             Ir para painel administrativo
           </button>
+
 
           <button
             id="home-view-as-student-btn"
